<resources>
    <string name="app_name" translatable="false">BonVitess</string>
    <string name="busNumber">Номер маршруту</string>
    <string name="title_activity_display_result" translatable="false">DisplayResultActivity</string>
    <string name="button_name">Пошук</string>
    <string name="title_activity_maps_result" translatable="false">MapsResultActivity</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyCA44ILPHwirrXtzVoI7pwR3kJJkr8X-kA</string>
    <string name="list_of_routes">Список маршрутів (м.Умань)</string>
    <string name="starting_point">Початкова точка</string>
    <string name="ending_point">Кінцева точка</string>
    <string name="settings_text">Налаштування</string>
    <string name="darkmode_text">Темний режим</string>
    <string name="darkmode_subtitle">Так, тут є темна тема, спробуй</string>
    <string name="developers_text">Розробники</string>
    <string name="developers_subtitle">Невелика інформація про нас</string>
    <string name="app_version" translatable="false">2023 BonVitess. Release 1.0.3</string>
    <string name="routes_titletext">Маршрути</string>
    <string name="routes_subtitle">Переглянь всі існуючі маршрути міста</string>
    <string name="developers_aboutUs_activity">Розробники застосунку</string>
    <string name="menu_text">Меню</string>
    <string name="route_textbutton">Маршрути</string>
    <string name="settings_textbutton">Налаштування</string>
    <string name="main_textbutton">Головна</string>
    <string name="wheretogo_text">Куди їдемо?</string>
    <string name="yourroute_text">Ваш маршрут</string>

</resources>