<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/MenuText_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/menu_text"
        android:textAllCaps="true"
        android:textColor="@color/stable_orange"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/mainActivity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/MenuText_welcome"
        android:layout_centerHorizontal="true"
        android:paddingTop="100dp"
        android:clickable="true"
        android:fontFamily="@font/montserrat_extrabold"
        android:onClick="OnMainActivityClick"
        android:text="@string/main_textbutton"
        android:textAllCaps="true"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/routesActivity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainActivity_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:clickable="true"
        android:fontFamily="@font/montserrat_extrabold"
        android:onClick="OnRouteActivityClick"
        android:text="@string/route_textbutton"
        android:textAllCaps="true"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/settingsActivity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/routesActivity_text"
        android:layout_marginTop="100dp"
        android:clickable="true"
        android:paddingBottom="80dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:onClick="OnSettingsActivityClick"
        android:text="@string/settings_textbutton"
        android:textAllCaps="true"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/aboutApp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/app_version"
        android:textColor="@color/black800_base" />
</RelativeLayout>